[gd_scene format=3 uid="uid://d3x1y204a5b6c"]

[ext_resource type="Script" uid="uid://dtscqhcaqtreq" path="res://UI/Layout/game_window.gd" id="1_layout"]
[ext_resource type="Theme" uid="uid://dpov18qpoqhlb" path="res://UI/Themes/daw_theme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://cjdgy6uoobd48" path="res://UI/Icons/speed_down.svg" id="3_j48ql"]
[ext_resource type="Texture2D" uid="uid://db0c38x6qu3j6" path="res://UI/Icons/play.svg" id="4_648vu"]
[ext_resource type="Texture2D" uid="uid://b2rofkoacpmvm" path="res://UI/Icons/speed_up.svg" id="5_v3gkn"]
[ext_resource type="Texture2D" uid="uid://coxcnq8aomvit" path="res://UI/Icons/volume.svg" id="6_q8a2y"]
[ext_resource type="StyleBox" uid="uid://dmckjg7vfbq2s" path="res://UI/Themes/meter_clipper_style.tres" id="8_clipper"]
[ext_resource type="Texture2D" uid="uid://c26p8kca2limr" path="res://UI/Icons/minimise.svg" id="9_0yftj"]
[ext_resource type="Shader" uid="uid://g3mfhouro5ou" path="res://UI/Shaders/peak_meter.gdshader" id="9_peak_shader"]
[ext_resource type="Texture2D" uid="uid://bgjlsw5u6ehrv" path="res://UI/Icons/window.svg" id="10_fcxat"]
[ext_resource type="Texture2D" uid="uid://ld1ntqmn7kgd" path="res://UI/Icons/close.svg" id="11_4r27i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_peak"]
shader = ExtResource("9_peak_shader")
shader_parameter/color_start = Color(0.3019608, 0.73333335, 0.41568628, 0.95686275)
shader_parameter/color_mid = Color(0.7604822, 0.6599067, 0.33715135, 0.96800005)
shader_parameter/color_end = Color(0.59261936, 0.17558163, 0.106126174, 0.95600003)
shader_parameter/mid_point = 0.5
shader_parameter/total_width = 350.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bar_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_white"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="ButtonGroup" id="ButtonGroup_sidebar_tabs"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tab_separator_local"]
color = Color(0.5137255, 0.5137255, 0.5137255, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 2
vertical = true

[node name="GameWindow" type="Control" unique_id=1969327129]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_layout")
metadata/_edit_vertical_guides_ = [960.0]

[node name="Background" type="Panel" parent="." unique_id=208253181]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WorkspacePanel"

[node name="MainLayout" type="VBoxContainer" parent="." unique_id=741348368]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="MainLayout" unique_id=925509776]
z_index = 2
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
theme_type_variation = &"TopBarPanel"

[node name="Content" type="HBoxContainer" parent="MainLayout/TopBar" unique_id=1225175078]
layout_mode = 2

[node name="Spacer1" type="Control" parent="MainLayout/TopBar/Content" unique_id=1957524981]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MenuButton" type="MenuButton" parent="MainLayout/TopBar/Content" unique_id=1995104034]
layout_mode = 2
text = " Menu "

[node name="SettingsButton" type="Button" parent="MainLayout/TopBar/Content" unique_id=1594096625]
layout_mode = 2
focus_mode = 0
text = " Settings "
flat = true

[node name="HelpButton" type="Button" parent="MainLayout/TopBar/Content" unique_id=1334326068]
layout_mode = 2
focus_mode = 0
text = " Help "
flat = true

[node name="VSeparator1" type="VSeparator" parent="MainLayout/TopBar/Content" unique_id=73948576]
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainLayout/TopBar/Content" unique_id=62018420]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="PerformanceMeterContainer" type="PanelContainer" parent="MainLayout/TopBar/Content" unique_id=1077080360]
custom_minimum_size = Vector2(225, 22)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"MeterBackground"

[node name="MeterHBox" type="HBoxContainer" parent="MainLayout/TopBar/Content/PerformanceMeterContainer" unique_id=184920401]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HealthLabel" type="Label" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox" unique_id=182939402]
layout_mode = 2
text = "Integrity:"
vertical_alignment = 1

[node name="Spacer5" type="Control" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox" unique_id=836429443]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MeterVBox" type="VBoxContainer" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox" unique_id=532243765]
custom_minimum_size = Vector2(350, 35)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="BarContainerL" type="Panel" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox/MeterVBox" unique_id=982736451]
clip_children = 2
custom_minimum_size = Vector2(350, 6)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("8_clipper")

[node name="BarL" type="ProgressBar" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox/MeterVBox/BarContainerL" unique_id=2084685703]
material = SubResource("ShaderMaterial_peak")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_bar_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_white")
show_percentage = false

[node name="PeakLineL" type="ColorRect" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox/MeterVBox/BarContainerL/BarL" unique_id=2027420559]
custom_minimum_size = Vector2(2, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.5137255, 0.5137255, 0.5137255, 1)

[node name="BarContainerR" type="Panel" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox/MeterVBox" unique_id=827364519]
clip_children = 2
custom_minimum_size = Vector2(350, 6)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("8_clipper")

[node name="BarR" type="ProgressBar" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox/MeterVBox/BarContainerR" unique_id=1229082749]
material = SubResource("ShaderMaterial_peak")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_bar_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_white")
show_percentage = false

[node name="PeakLineR" type="ColorRect" parent="MainLayout/TopBar/Content/PerformanceMeterContainer/MeterHBox/MeterVBox/BarContainerR/BarR" unique_id=632731713]
custom_minimum_size = Vector2(2, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.5137255, 0.5137255, 0.5137255, 1)

[node name="Spacer4" type="Control" parent="MainLayout/TopBar/Content" unique_id=92806510]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2

[node name="VSeparator5" type="VSeparator" parent="MainLayout/TopBar/Content" unique_id=1709007433]
layout_mode = 2

[node name="TransportControls" type="HBoxContainer" parent="MainLayout/TopBar/Content" unique_id=1503373109]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SpeedDownButton" type="Button" parent="MainLayout/TopBar/Content/TransportControls" unique_id=1417243523]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
icon = ExtResource("3_j48ql")
flat = true
expand_icon = true

[node name="PlayButton" type="Button" parent="MainLayout/TopBar/Content/TransportControls" unique_id=1372303758]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
icon = ExtResource("4_648vu")
flat = true
expand_icon = true

[node name="SpeedUpButton" type="Button" parent="MainLayout/TopBar/Content/TransportControls" unique_id=996963216]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
icon = ExtResource("5_v3gkn")
flat = true
expand_icon = true

[node name="VolumeButton" type="Button" parent="MainLayout/TopBar/Content/TransportControls" unique_id=1707035131]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
icon = ExtResource("6_q8a2y")
flat = true
expand_icon = true

[node name="VolumeSlider" type="HSlider" parent="MainLayout/TopBar/Content/TransportControls" unique_id=1422392630]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
value = 80.0

[node name="VSeparator2" type="VSeparator" parent="MainLayout/TopBar/Content" unique_id=84059687]
layout_mode = 2

[node name="Spacer3" type="Control" parent="MainLayout/TopBar/Content" unique_id=1173521741]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="WaveInfoPanel" type="PanelContainer" parent="MainLayout/TopBar/Content" unique_id=1437747474]
custom_minimum_size = Vector2(350, 32)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"DisplayPanel"

[node name="InfoHBox" type="HBoxContainer" parent="MainLayout/TopBar/Content/WaveInfoPanel" unique_id=192214825]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WaveLabel" type="Label" parent="MainLayout/TopBar/Content/WaveInfoPanel/InfoHBox" unique_id=1299038656]
layout_mode = 2
text = "Track: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="MainLayout/TopBar/Content/WaveInfoPanel/InfoHBox" unique_id=108164397]
layout_mode = 2
text = "Speed: 1.00x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GainLabel" type="Label" parent="MainLayout/TopBar/Content/WaveInfoPanel/InfoHBox" unique_id=498584933]
layout_mode = 2
text = "Gain: 0 dB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightSpacer" type="Control" parent="MainLayout/TopBar/Content" unique_id=829581726]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="VSeparator4" type="VSeparator" parent="MainLayout/TopBar/Content" unique_id=106271809]
layout_mode = 2

[node name="WindowControls" type="HBoxContainer" parent="MainLayout/TopBar/Content" unique_id=29384756]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MinimizeButton" type="Button" parent="MainLayout/TopBar/Content/WindowControls" unique_id=38475629]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
focus_mode = 0
icon = ExtResource("9_0yftj")
flat = true
expand_icon = true

[node name="MaximizeButton" type="Button" parent="MainLayout/TopBar/Content/WindowControls" unique_id=48576293]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
focus_mode = 0
icon = ExtResource("10_fcxat")
flat = true
expand_icon = true

[node name="CloseButton" type="Button" parent="MainLayout/TopBar/Content/WindowControls" unique_id=37582946]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
focus_mode = 0
icon = ExtResource("11_4r27i")
flat = true
expand_icon = true

[node name="WorkspaceSplit" type="HBoxContainer" parent="MainLayout" unique_id=1499982377]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="LeftSidebar" type="PanelContainer" parent="MainLayout/WorkspaceSplit" unique_id=1963009277]
z_index = 1
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_type_variation = &"SideBarPanel"

[node name="SidebarContent" type="VBoxContainer" parent="MainLayout/WorkspaceSplit/LeftSidebar" unique_id=387430190]
layout_mode = 2

[node name="TabPadding" type="MarginContainer" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent" unique_id=208253187]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 3

[node name="TabContainer" type="HBoxContainer" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent/TabPadding" unique_id=208253182]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BuffsButton" type="Button" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent/TabPadding/TabContainer" unique_id=208253183]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"TabButton"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_sidebar_tabs")
text = "Buffs"

[node name="TabSeparator" type="VSeparator" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent/TabPadding/TabContainer" unique_id=208253184]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxLine_tab_separator_local")

[node name="CardsButton" type="Button" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent/TabPadding/TabContainer" unique_id=208253185]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_type_variation = &"TabButton"
toggle_mode = true
button_group = SubResource("ButtonGroup_sidebar_tabs")
text = "Cards"

[node name="SeparatorMargin" type="MarginContainer" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent" unique_id=208253186]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_right = 9

[node name="HSeparator" type="HSeparator" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent/SeparatorMargin" unique_id=152939837]
layout_mode = 2

[node name="CardMarginContainer" type="MarginContainer" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent" unique_id=1387222036]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CardGrid" type="GridContainer" parent="MainLayout/WorkspaceSplit/LeftSidebar/SidebarContent/CardMarginContainer" unique_id=2085615986]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="GameViewContainer" type="SubViewportContainer" parent="MainLayout/WorkspaceSplit" unique_id=1688367999]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="MainLayout/WorkspaceSplit/GameViewContainer" unique_id=135730004]
handle_input_locally = false
size = Vector2i(1600, 1024)
render_target_update_mode = 4

[node name="MainMenuConfirmation" type="ConfirmationDialog" parent="." unique_id=1158682758]
oversampling_override = 1.0
title = "Confirm"
initial_position = 2
size = Vector2i(350, 100)
dialog_text = "Quit game and return to main menu?"

[node name="QuitConfirmation" type="ConfirmationDialog" parent="." unique_id=624483855]
title = "Confirm"
initial_position = 2
size = Vector2i(300, 100)
dialog_text = "Quit to desktop?"
